# kfs-2

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  flake.nix  i386.json
.cargo/: config.toml
src/: Cargo.toml  Makefile  lib.rs  main.rs  script.sh  vga_buffer.rs
src/arch/x86/: mod.rs  port.rs
src/arch/x86/gdt/: gdt.rs  mod.rs
src/boot/: boot.asm  grub.cfg  linker.ld
src/drivers/: mod.rs
src/drivers/bus/ps2/: controller.rs
src/drivers/input/keyboard/: keymap_us.rs  mod.rs  ps2.rs  scancode_set1.rs  types.rs
src/drivers/video/: mod.rs  vga_text.rs
src/subsystems/: console.rs
src/sync/: spinlock.rs
